--- a/location/location.html
+++ b/location/location.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>location</title>
+  <title>kakaolocation</title>
   <meta name="description" content="location content">
   <link rel="stylesheet" href="../asset/css/style.css">
   <script type="text/javascript" src="../js/jquery.min.js"></script>
