--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>sass site add footer style</title>
+  <title>SSG 이윤정 포트폴리오 sass site</title>
   <meta name="description" content="sass site add footer style">
   <link rel="stylesheet" href="./asset/css/style.css">
   <script type="text/javascript" src="./js/jquery.min.js"></script>
@@ -55,7 +55,13 @@
 
     <main>
       <!-- 메인배너 영역-->
-      <div class="mainbanner"></div>
+      <div class="mainbanner">
+        <div class="main-banner">
+          <video autoplay="" loop="" muted="" poster="http://ui.ssgcdn.com/ui/company/img/main/poster_visual.jpg">
+            <source src="http://ui.ssgcdn.com/ui/company/img/main/mov_visual.mp4" type="video/mp4">
+          </video>
+        </div>
+      </div>
       <!-- 컨텐츠 영역 -->
       <div class="container">
         <div class="content-wrap">
