--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="mainbanner">
         <div class="main-banner">
           <video autoplay="" loop="" muted="" poster="http://ui.ssgcdn.com/ui/company/img/main/poster_visual.jpg">
-            <source src="http://ui.ssgcdn.com/ui/company/img/main/mov_visual.mp4" type="video/mp4">
+            <source src="./asset/img/main/mov_visual.mp4" type="video/mp4">
           </video>
         </div>
       </div>
