--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <!-- 메인배너 영역-->
       <div class="mainbanner">
         <div class="main-banner">
-          <video autoplay="" loop="" muted="" poster="http://ui.ssgcdn.com/ui/company/img/main/poster_visual.jpg">
+          <video autoplay="" loop="" muted="" poster="./asset/img/main/poster_visual.jpg">
             <source src="./asset/img/main/mov_visual.mp4" type="video/mp4">
           </video>
         </div>
