--- a/index.html
+++ b/index.html
@@ -65,77 +65,79 @@
       <!-- 컨텐츠 영역 -->
       <div class="container">
         <div class="content-wrap">
-          <div class="content">
-            <div class="content-text">
-              <span>SSG e-Commerce Eco System</span>
-              <h2>e-Commerce<br>Eco System 구축</h2>
-              <p>SSG는 고객(Customer)과 협력업체 (Provider)를<br>
-                상품 (Product) 중심으로 연결해주는<br>
-                전자상거래 생태계를 구축하고자 합니다.</p>
+          <section>
+            <div class="content1">
+              <div class="content-text">
+                <span>SSG e-Commerce Eco System</span>
+                <h2>e-Commerce<br>Eco System 구축</h2>
+                <p>SSG는 고객(Customer)과 협력업체 (Provider)를<br>
+                  상품 (Product) 중심으로 연결해주는<br>
+                  전자상거래 생태계를 구축하고자 합니다.</p>
+              </div>
+              <div class="content-img"></div>
             </div>
-            <div class="content-img"></div>
-          </div>
-          <div class="content2">
-            <div class="content-img"></div>
-            <div class="content-text">
-              <span>SSG Product</span>
-              <h2>백화점부터<br>이마트까지<br>한눈에 한번에</h2>
-              <p>우리의 모든 일상은 쇼핑으로 연결됩니다<br>삼시세끼를 채울 장도 봐야하고,<br>다가오는 계절을 대비해 옷도 사야하죠.</p>
-              <p>시야할 것도, 사고싶은 것도 많은 우리의 일상을<br>좀 더 편리하게 만들기 위해<br>SSG.COM은 하나의 앱에 모든 것을 담았습니다.</p>
-              <p>여기 저기 탐색할 필요 없어요.<br>백화점부터 이마트까지,<br>SSG.COM에서 신세계적인 쇼핑 라이프를 즐겨보세요.</p>
+          </section>
+          <section>
+            <div class="content2">
+              <div class="content-img"></div>
+              <div class="content-text">
+                <span>SSG Product</span>
+                <h2>백화점부터<br>이마트까지 한눈에 한번에</h2>
+                <p>우리의 모든 일상은 쇼핑으로 연결됩니다<br>삼시세끼를 채울 장도 봐야하고,<br>다가오는 계절을 대비해 옷도 사야하죠.</p>
+                <p>시야할 것도, 사고싶은 것도 많은 우리의 일상을<br>좀 더 편리하게 만들기 위해<br>SSG.COM은 하나의 앱에 모든 것을 담았습니다.</p>
+                <p>여기 저기 탐색할 필요 없어요.<br>백화점부터 이마트까지,<br>SSG.COM에서 신세계적인 쇼핑 라이프를 즐겨보세요.</p>
+              </div>
             </div>
-          </div>
-          <div class="content3">
-            <div class="content-text1">
-              <span>SSG Service</span>
-              <h2>내가 정한 시간에<br>쓱-배송</h2>
+          </section>
+          <section>
+            <div class="content3">
+              <div class="content-text1">
+                <span>SSG Service</span>
+                <h2>내가 정한 시간에<br>쓱-배송</h2>
+              </div>
+              <div class="content-img"></div>
+              <div class="content-text2">
+                <p>온라인 쇼핑에서 가장 견디기 힘든일은 바로 언제 배송이 올지 기다리는 일이죠.</p>
+                <p>당장 오늘 저녁거리가 필요한데 배송이 제때 올까, 한번만 쓰면 샴푸가 동날 것 같은데 내일 아침에 배송이 올까</p>
+                <p>이런 걱정, SSG.COM에서는 내려놓으셔도 됩니다.</p>
+                <p>쓱배송은 내가 정한 일자에, 내가 선택한 시간에 도착하니까요.</p>
+              </div>
             </div>
-            <div class="content-img"></div>
-            <div class="content-text2">
-              <p>온라인 쇼핑에서 가장 견디기 힘든일은 바로 언제 배송이 올지 기다리는 일이죠.</p>
-              <p>당장 오늘 저녁거리가 필요한데 배송이 제때 올까, 한번만 쓰면 샴푸가 동날 것 같은데 내일 아침에 배송이 올까</p>
-              <p>이런 걱정, SSG.COM에서는 내려놓으셔도 됩니다.</p>
-              <p>쓱배송은 내가 정한 일자에, 내가 선택한 시간에 도착하니까요.</p>
-            </div>
-          </div>
+          </section>
         </div>
       </div>
     </main>
 
     <!-- 하단 영역 -->
     <footer id="footer">
-      <div class="footer-top">
-        <!-- footer 상단 영역 -->
+      <div class="footer-wrap">
+        <div class="footer-logo">
+          <h6>(주)에스에스지닷컴</h6>
+        </div>
         <div class="container">
-          <div class="row">
-            <div class="column footer_logo">
-              <!-- footer logo -->
-              <h3>(주)에스에스지닷컴</h3>
-            </div>
-            <div class="foot-info">
-              <span>대표자 : 강희석 </span>
-              <p>사업자등록번호 : 870-88-01143 서울특별시 종로구 우정국로 26 통신판매업 신고번호 : 제2020-서울종로-1154호</p>
-              <span>개인정보보호책임자 : 김민</span>
-              <p>FAX : 02-2068-7118 ssg@ssg.com</p>
-            </div>
-            <div class="foot-bottom">
-              <nav>
-                <ul>
-                  <li><a href="#">개인정보처리방침</a></li>
-                  <li><a href="#">영상정보처리기기 운영관리방침</a></li>
-                  <li><a href="#">핫라인</a></li>
-                </ul>
-              </nav>
-              <div class="search">
-                <form action="">
-                  <input type="search" name="search">
-                  <input type="submit" value="search">
-                </form>
-              </div>
+          <div class="foot-info">
+            <span>대표자 : 강희석 </span>
+            <p>사업자등록번호 : 870-88-01143 서울특별시 종로구 우정국로 26 통신판매업 신고번호 : 제2020-서울종로-1154호</p>
+            <span>개인정보보호책임자 : 김민</span>
+            <p>FAX : 02-2068-7118 ssg@ssg.com</p>
+          </div>
+          <div class="foot-bottom">
+            <nav>
+              <ul>
+                <li><a href="#">개인정보처리방침</a></li>
+                <li><a href="#">영상정보처리기기 운영관리방침</a></li>
+                <li><a href="#">핫라인</a></li>
+              </ul>
+            </nav>
+            <div class="search">
+              <form action="">
+                <input type="search" name="search">
+                <input type="submit" value="search">
+              </form>
             </div>
           </div>
         </div>
-        <div class="container">
+        <div class="container2">
           <!-- footer 하단 영역 -->
           <div class="coypyright">
             ⓒcopryright <strong>mypage</strong> .All Rights Reserved.
