--- a/index.html
+++ b/index.html
@@ -129,12 +129,6 @@
                 <li><a href="#">핫라인</a></li>
               </ul>
             </nav>
-            <div class="search">
-              <form action="">
-                <input type="search" name="search">
-                <input type="submit" value="search">
-              </form>
-            </div>
           </div>
         </div>
         <div class="container2">
@@ -143,7 +137,7 @@
             ⓒcopryright <strong>mypage</strong> .All Rights Reserved.
           </div>
           <div class="credits">
-            Designed By <a href="mailto:mymail@naver.com">My Name</a>
+            Designed By <a href="http://company.ssg.com/main.ssg">SSG.COM</a>
           </div>
         </div>
       </div>
