서브페이지 작업

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <a href="./company/introduce.html">회사소개</a>
             <ul class="submenu">
               <li><a href="./company/introduce.html">SSG.COM 소개</a></li>
-              <li><a href="./company/ci.html">성장 스토리</a></li>
-              <li><a href="./company/history.html">브랜드 스토리</a></li>
+              <li><a href="./company/history.html">성장 스토리</a></li>
+              <li><a href="./company/brand.html">브랜드 스토리</a></li>
             </ul>
           </li>
           <li><a href="./product/product.html">경영정보</a>
