--- a/company/history.html
+++ b/company/history.html
@@ -1,147 +1,154 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
-  <title>history</title>
-  <meta name="description" content="history content">
+  <title>SSG 이윤정 포트폴리오 sass site</title>
+  <meta name="description" content="sass site add footer style">
   <link rel="stylesheet" href="../asset/css/style.css">
-  <script type="text/javascript" src="../js/jquery.min.js"></script>
-  <script type="text/javascript" src="../js/common.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <script type="text/javascript" src="./js/jquery.min.js"></script>
+  <script type="text/javascript" src="./js/common.js"></script>
   <!--[if lt IE 9]>
   <script src = "http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
-<body class="subpage">
- <div id="wrap">
-   <header id="header">
+
+<body>
+  <div id="wrap">
+    <header id="header">
       <!-- 헤더 영역  -->
-      <h1 id="top_logo"><a href="../index.html">Xwood</a></h1>
+      <h1 id="top_logo"><a href="../index.html"><img src="../asset/img/main/ssg_logo_black.svg" alt=""></a></h1>
       <nav id="top_nav">
         <ul>
           <li>
-            <a href="../company/introduce.html">Company</a>
+            <a href="./introduce.html">회사소개</a>
             <ul class="submenu">
-              <li><a href="../company/introduce.html">introduce</a></li>
-              <li><a href="../company/ci.html">ci</a></li>
-              <li><a href="../company/history.html">history</a></li>
+              <li><a href="./introduce.html">SSG.COM 소개</a></li>
+              <li><a href="./history.html">성장 스토리</a></li>
+              <li><a href="./brand.html">브랜드 스토리</a></li>
             </ul>
           </li>
-          <li><a href="../product/product.html">Product</a></li>
-          <li><a href="../gallery/gallery.html">Gallery</a></li>
-          <li><a href="../community/notice.html">Community</a></li>
-          <li><a href="../location/location.html">Location</a></li>
+          <li><a href="./product/product.html">경영정보</a>
+            <ul class="submenu">
+              <li><a href="./company/introduce.html">전자공고</a></li>
+            </ul>
+          </li>
+          <li><a href="./gallery/gallery.html">홍보채널</a>
+            <ul class="submenu">
+              <li><a href="./company/introduce.html">브랜드 영상</a></li>
+              <li><a href="./company/ci.html">보도자료</a></li>
+            </ul>
+          </li>
+          <li><a href="./community/notice.html">CSR 경영</a>
+            <ul class="submenu">
+              <li><a href="./company/introduce.html">CSR 경영</a></li>
+              <li><a href="./company/ci.html">투명경영</a></li>
+              <li><a href="./company/history.html">사회공헌</a></li>
+              <li><a href="./company/history.html">상생경영</a></li>
+              <li><a href="./company/history.html">핫라인</a></li>
+            </ul>
+          </li>
+          <li><a href="./location/location.html">찾아오시는 길</a></li>
         </ul>
       </nav>
-   </header>
-   <main>
-     <!-- 컨텐츠 영역 -->
-     <div class="container">
-       <!-- 왼쪽메뉴 -->
-       <aside id="lnb">
-         <ul>
-           <li><a href="./introduce.html">Introduce</a></li>
-           <li><a href="./ci.html">CI</a></li>
-           <li><a href="./history.html" class="on">History</a></li>
-         </ul>
-       </aside>
-       <!-- 컨텐츠 본문 -->
-       <div class="content">
-         <h2 class="sub_title"><span>History</span></h2>
-         <div class="inner">
-           <div class="box expand">
-             <div class="items"><!--상단 영역-->
-               <h3 class="title">funiture</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
-             </div>
-             <div class="items"><!--하단 영역-->
-               <img src="../asset/img/company/company_img01.jpg" alt="company_img01">
-             </div>
-           </div>
-         </div>
-         <div class="inner">
-           <div class="box items_2">
-             <div class="items"><!--왼쪽 영역-->
-               <img src="../asset/img/thumb_nail02.jpg" alt="thumb02">
-             </div>
-             <div class="items"><!--오른쪽 영역-->
-               <h3 class="title">funiture</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
-               <a href="../company/company01.html" class="gbtn">More View</a>
-             </div>
-           </div>
-         </div>
-         <div class="inner">
-           <div class="box expand">
-             <div class="items"><!--상단영역 영역-->
-               <img src="../asset/img/company/company_img02.jpg" alt="company_img02">
-             </div>
-             <div class="items"><!--하단 영역-->
-               <h3 class="title">funiture</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
-             </div>
-           </div>
-         </div>
-       </div>
-     </div>
-   </main>
-   <!-- 하단 영역 -->
-   <footer id="footer">
-     <div class="footer_top">
-       <!-- footer 상단 영역 -->
-       <div class="container">
-         <div class="row">
-           <div class="column footer_logo">
-             <!-- footer logo -->
-             <h3>logo</h3>
-           </div>
-           <div class="column">
-             <!-- site map -->
-             <h4>site map</h4>
-             <ul>
-               <li><a href="../company/introduce.html">Company</a></li>
-               <li><a href="../product/product.html">Product</a></li>
-               <li><a href="../gallery/gallery.html">Gallery</a></li>
-               <li><a href="../community/notice.html">Community</a></li>
-               <li><a href="../location/location.html">Location</a></li>
-             </ul>
-           </div>
-           <div class="column">
-             <!-- contact us -->
-             <h4>contact us</h4>
-             <p>
-               A108 Adam street<br>
-               New York, NY 535022<br>
-               United states<br>
-               <strong>phone&nbsp;:&nbsp;</strong><a href="tel=+82-010-0000-0000">+82-010-0000-0000</a><br>
-               <strong>Email&nbsp;:&nbsp;</strong><a href="mailto=mymail@naver.com">mymail@naver.com</a><br>
-             </p>
-           </div>
-           <div class="column news">
-             <!-- news -->
-             <h4>news</h4>
-             <p>
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet,
-               consectetur adipisicing elit
-             </p>
-             <form action="">
-               <input type="search" name="search">
-               <input type="submit" value="search">
-             </form>
-           </div>
-         </div>
-       </div>
-     </div>
-     <div class="container">
-       <!-- footer 하단 영역 -->
-       <div class="coypyright">
-         ⓒcopryright <strong>mypage</strong> .All Rights Reserved.
-       </div>
-       <div class="credits">
-         Designed By <a href="mailto:mymail@naver.com">My Name</a>
-       </div>
-     </div>
-   </footer>
- </div>
+    </header>
+
+    <main>
+      <!-- 메인배너 영역-->
+      <div class="mainbanner">
+        <div class="main-banner">
+          <video autoplay="" loop="" muted="" poster="./asset/img/main/poster_visual.jpg">
+            <source src="./asset/img/main/mov_visual.mp4" type="video/mp4">
+          </video>
+        </div>
+      </div>
+      <!-- 컨텐츠 영역 -->
+      <div class="container">
+        <div class="content-wrap">
+          <section>
+            <div class="content1">
+              <div class="content-text" data-aos="fade-right" data-aos-duration="2000">
+                <span>SSG e-Commerce Eco System</span>
+                <h2>e-Commerce<br>Eco System 구축</h2>
+                <p>SSG는 고객(Customer)과 협력업체 (Provider)를<br>
+                  상품 (Product) 중심으로 연결해주는<br>
+                  전자상거래 생태계를 구축하고자 합니다.</p>
+              </div>
+              <div class="content-img"></div>
+            </div>
+          </section>
+          <section>
+            <div class="content2">
+              <div class="content-img"></div>
+              <div class="content-text" data-aos="fade-left" data-aos-duration="2000">
+                <span>SSG Product</span>
+                <h2>백화점부터<br>이마트까지 한눈에 한번에</h2>
+                <p>우리의 모든 일상은 쇼핑으로 연결됩니다<br>삼시세끼를 채울 장도 봐야하고,<br>다가오는 계절을 대비해 옷도 사야하죠.</p>
+                <p>시야할 것도, 사고싶은 것도 많은 우리의 일상을<br>좀 더 편리하게 만들기 위해<br>SSG.COM은 하나의 앱에 모든 것을 담았습니다.</p>
+                <p>여기 저기 탐색할 필요 없어요.<br>백화점부터 이마트까지,<br>SSG.COM에서 신세계적인 쇼핑 라이프를 즐겨보세요.</p>
+              </div>
+            </div>
+          </section>
+          <section>
+            <div class="content3">
+              <div class="content-text1" data-aos="fade-up" data-aos-duration="2000">
+                <span>SSG Service</span>
+                <h2>내가 정한 시간에<br>쓱-배송</h2>
+              </div>
+              <div class="content-img"></div>
+              <div class="content-text2">
+                <p>온라인 쇼핑에서 가장 견디기 힘든일은 바로 언제 배송이 올지 기다리는 일이죠.</p>
+                <p>당장 오늘 저녁거리가 필요한데 배송이 제때 올까, 한번만 쓰면 샴푸가 동날 것 같은데 내일 아침에 배송이 올까</p>
+                <p>이런 걱정, SSG.COM에서는 내려놓으셔도 됩니다.</p>
+                <p>쓱배송은 내가 정한 일자에, 내가 선택한 시간에 도착하니까요.</p>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </main>
+
+    <!-- 하단 영역 -->
+    <footer id="footer">
+      <div class="footer-wrap">
+        <div class="footer-logo">
+          <h6>(주)에스에스지닷컴</h6>
+        </div>
+        <div class="container">
+          <div class="foot-info">
+            <span>대표자 : 강희석 </span>
+            <p>사업자등록번호 : 870-88-01143 서울특별시 종로구 우정국로 26 통신판매업 신고번호 : 제2020-서울종로-1154호</p>
+            <span>개인정보보호책임자 : 김민</span>
+            <p>FAX : 02-2068-7118 ssg@ssg.com</p>
+          </div>
+          <div class="foot-bottom">
+            <nav>
+              <ul>
+                <li><a href="#">개인정보처리방침</a></li>
+                <li><a href="#">영상정보처리기기 운영관리방침</a></li>
+                <li><a href="#">핫라인</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="container2">
+          <!-- footer 하단 영역 -->
+          <div class="coypyright">
+            ⓒcopryright <strong>mypage</strong> .All Rights Reserved.
+          </div>
+          <div class="credits">
+            Designed By <a href="http://company.ssg.com/main.ssg">SSG.COM</a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+  </div>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
+
 </html>
