--- a/company/introduce.html
+++ b/company/introduce.html
@@ -1,147 +1,125 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
-  <title>introduce</title>
-  <meta name="description" content="introduce content">
+  <title>SSG 이윤정 포트폴리오 sass site</title>
+  <meta name="description" content="sass site add footer style">
   <link rel="stylesheet" href="../asset/css/style.css">
-  <script type="text/javascript" src="../js/jquery.min.js"></script>
-  <script type="text/javascript" src="../js/common.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <script type="text/javascript" src="./js/jquery.min.js"></script>
+  <script type="text/javascript" src="./js/common.js"></script>
   <!--[if lt IE 9]>
   <script src = "http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
-<body class="subpage">
- <div id="wrap">
-   <header id="header">
+
+<body>
+  <div id="wrap">
+    <header id="header">
       <!-- 헤더 영역  -->
-      <h1 id="top_logo"><a href="../index.html">Xwood</a></h1>
+      <h1 id="top_logo"><a href="../index.html"><img src="../asset/img/main/ssg_logo_black.svg" alt=""></a></h1>
       <nav id="top_nav">
         <ul>
           <li>
-            <a href="../company/introduce.html">Company</a>
+            <a href="./introduce.html" class="nav-color">회사소개</a>
             <ul class="submenu">
-              <li><a href="../company/introduce.html">introduce</a></li>
-              <li><a href="../company/ci.html">ci</a></li>
-              <li><a href="../company/history.html">history</a></li>
+              <li><a href="./introduce.html">SSG.COM 소개</a></li>
+              <li><a href="./history.html">성장 스토리</a></li>
+              <li><a href="./brand.html">브랜드 스토리</a></li>
             </ul>
           </li>
-          <li><a href="../product/product.html">Product</a></li>
-          <li><a href="../gallery/gallery.html">Gallery</a></li>
-          <li><a href="../community/notice.html">Community</a></li>
-          <li><a href="../location/location.html">Location</a></li>
+          <li><a href="./product/product.html">경영정보</a>
+            <ul class="submenu">
+              <li><a href="./company/introduce.html">전자공고</a></li>
+            </ul>
+          </li>
+          <li><a href="./gallery/gallery.html">홍보채널</a>
+            <ul class="submenu">
+              <li><a href="./company/introduce.html">브랜드 영상</a></li>
+              <li><a href="./company/ci.html">보도자료</a></li>
+            </ul>
+          </li>
+          <li><a href="./community/notice.html">CSR 경영</a>
+            <ul class="submenu">
+              <li><a href="./company/introduce.html">CSR 경영</a></li>
+              <li><a href="./company/ci.html">투명경영</a></li>
+              <li><a href="./company/history.html">사회공헌</a></li>
+              <li><a href="./company/history.html">상생경영</a></li>
+              <li><a href="./company/history.html">핫라인</a></li>
+            </ul>
+          </li>
+          <li><a href="./location/location.html">찾아오시는 길</a></li>
         </ul>
       </nav>
-   </header>
-   <main>
-     <!-- 컨텐츠 영역 -->
-     <div class="container">
-       <!-- 왼쪽메뉴 -->
-       <aside id="lnb">
-         <ul>
-           <li><a href="./introduce.html" class="on">Introduce</a></li>
-           <li><a href="./ci.html">CI</a></li>
-           <li><a href="./history.html">History</a></li>
-         </ul>
-       </aside>
-       <!-- 컨텐츠 본문 -->
-       <div class="content">
-         <h2 class="sub_title"><span>Introduce</span></h2>
-         <div class="inner">
-           <div class="box expand">
-             <div class="items"><!--상단 영역-->
-               <h3 class="title">funiture</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
-             </div>
-             <div class="items"><!--하단 영역-->
-               <img src="../asset/img/company/company_img01.jpg" alt="company_img01">
-             </div>
-           </div>
-         </div>
-         <div class="inner">
-           <div class="box items_2">
-             <div class="items"><!--왼쪽 영역-->
-               <img src="../asset/img/thumb_nail02.jpg" alt="thumb02">
-             </div>
-             <div class="items"><!--오른쪽 영역-->
-               <h3 class="title">funiture</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
-               <a href="../company/company01.html" class="gbtn">More View</a>
-             </div>
-           </div>
-         </div>
-         <div class="inner">
-           <div class="box expand">
-             <div class="items"><!--상단영역 영역-->
-               <img src="../asset/img/company/company_img02.jpg" alt="company_img02">
-             </div>
-             <div class="items"><!--하단 영역-->
-               <h3 class="title">funiture</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
-             </div>
-           </div>
-         </div>
-       </div>
-     </div>
-   </main>
-   <!-- 하단 영역 -->
-   <footer id="footer">
-     <div class="footer_top">
-       <!-- footer 상단 영역 -->
-       <div class="container">
-         <div class="row">
-           <div class="column footer_logo">
-             <!-- footer logo -->
-             <h3>logo</h3>
-           </div>
-           <div class="column">
-             <!-- site map -->
-             <h4>site map</h4>
-             <ul>
-               <li><a href="../company/introduce.html">Company</a></li>
-               <li><a href="../product/product.html">Product</a></li>
-               <li><a href="../gallery/gallery.html">Gallery</a></li>
-               <li><a href="../community/notice.html">Community</a></li>
-               <li><a href="../location/location.html">Location</a></li>
-             </ul>
-           </div>
-           <div class="column">
-             <!-- contact us -->
-             <h4>contact us</h4>
-             <p>
-               A108 Adam street<br>
-               New York, NY 535022<br>
-               United states<br>
-               <strong>phone&nbsp;:&nbsp;</strong><a href="tel=+82-010-0000-0000">+82-010-0000-0000</a><br>
-               <strong>Email&nbsp;:&nbsp;</strong><a href="mailto=mymail@naver.com">mymail@naver.com</a><br>
-             </p>
-           </div>
-           <div class="column news">
-             <!-- news -->
-             <h4>news</h4>
-             <p>
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet,
-               consectetur adipisicing elit
-             </p>
-             <form action="">
-               <input type="search" name="search">
-               <input type="submit" value="search">
-             </form>
-           </div>
-         </div>
-       </div>
-     </div>
-     <div class="container">
-       <!-- footer 하단 영역 -->
-       <div class="coypyright">
-         ⓒcopryright <strong>mypage</strong> .All Rights Reserved.
-       </div>
-       <div class="credits">
-         Designed By <a href="mailto:mymail@naver.com">My Name</a>
-       </div>
-     </div>
-   </footer>
- </div>
+    </header>
+
+  <div class="company">
+    <div class="company-banner">
+      <div class="company-text">
+        <h1>SSG.COM 소개</h1>
+        <span></span>
+        <p>SSG로 모든 일상이 연결되는 세상을<br>만들어가기 위해 노력합니다.</p>
+      </div>
+    </div>
+
+    <div class="com-content">
+      <div class="content1">
+        <h3>INTRODUCTION</h3>
+        <p>SSG.COM은 2014년 1월 1일 신세계백화점, 이마트 등 신세계그룹의 모든 상품을 온라인에서 한 눈에 보고, 한 번의 결제만으로 편하게 구매할 수 있는 통합 온라인 쇼핑 플랫폼으로 탄생했습니다. 차별화된 상품, 다양한 서비스, 편리한 혜택으로 삶의 가치를 높이는 쇼핑 경험을 제공합니다.</p>
+      </div>
+
+      <div class="content2">
+        <h3>BUSINESS AREAS</h3>
+        <div class="content-img">
+          <img src="" alt="">
+        </div>
+      </div>
+
+    </div>
+    </div>
+  </div>
+
+    <!-- 하단 영역 -->
+    <footer id="footer">
+      <div class="footer-wrap">
+        <div class="footer-logo">
+          <h6>(주)에스에스지닷컴</h6>
+        </div>
+        <div class="container">
+          <div class="foot-info">
+            <span>대표자 : 강희석 </span>
+            <p>사업자등록번호 : 870-88-01143 서울특별시 종로구 우정국로 26 통신판매업 신고번호 : 제2020-서울종로-1154호</p>
+            <span>개인정보보호책임자 : 김민</span>
+            <p>FAX : 02-2068-7118 ssg@ssg.com</p>
+          </div>
+          <div class="foot-bottom">
+            <nav>
+              <ul>
+                <li><a href="#">개인정보처리방침</a></li>
+                <li><a href="#">영상정보처리기기 운영관리방침</a></li>
+                <li><a href="#">핫라인</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="container2">
+          <!-- footer 하단 영역 -->
+          <div class="coypyright">
+            ⓒcopryright <strong>mypage</strong> .All Rights Reserved.
+          </div>
+          <div class="credits">
+            Designed By <a href="http://company.ssg.com/main.ssg">SSG.COM</a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+  </div>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
+
 </html>
