--- a/company/introduce.html
+++ b/company/introduce.html
@@ -22,7 +22,7 @@
       <nav id="top_nav">
         <ul>
           <li>
-            <a href="./introduce.html" class="nav-color">회사소개</a>
+            <a href="./introduce.html">회사소개</a>
             <ul class="submenu">
               <li><a href="./introduce.html">SSG.COM 소개</a></li>
               <li><a href="./history.html">성장 스토리</a></li>
@@ -54,32 +54,82 @@
       </nav>
     </header>
 
-  <div class="company">
-    <div class="company-banner">
-      <div class="company-text">
-        <h1>SSG.COM 소개</h1>
-        <span></span>
-        <p>SSG로 모든 일상이 연결되는 세상을<br>만들어가기 위해 노력합니다.</p>
-      </div>
-    </div>
-
-    <div class="com-content">
-      <div class="content1">
-        <h3>INTRODUCTION</h3>
-        <p>SSG.COM은 2014년 1월 1일 신세계백화점, 이마트 등 신세계그룹의 모든 상품을 온라인에서 한 눈에 보고, 한 번의 결제만으로 편하게 구매할 수 있는 통합 온라인 쇼핑 플랫폼으로 탄생했습니다. 차별화된 상품, 다양한 서비스, 편리한 혜택으로 삶의 가치를 높이는 쇼핑 경험을 제공합니다.</p>
-      </div>
-
-      <div class="content2">
-        <h3>BUSINESS AREAS</h3>
-        <div class="content-img">
-          <img src="" alt="">
+    <div class="company">
+      <div class="company-banner">
+        <div class="company-text">
+          <h1>SSG.COM 소개</h1>
+          <span></span>
+          <p>SSG로 모든 일상이 연결되는 세상을<br>만들어가기 위해 노력합니다.</p>
         </div>
       </div>
 
-    </div>
-    </div>
-  </div>
+      <div class="com-content">
+        <div class="content one">
+          <div class="text">
+            <h3>INTRODUCTION</h3>
+            <p>SSG.COM은 2014년 1월 1일 신세계백화점, 이마트 등 신세계그룹의 모든 상품을 온라인에서 한 눈에 보고, 한 번의 결제만으로 편하게 구매할 수 있는 통합 온라인 쇼핑 플랫폼으로 탄생했습니다. 차별화된 상품, 다양한 서비스, 편리한 혜택으로 삶의 가치를 높이는 쇼핑 경험을 제공합니다.</p>
+          </div>
+        </div>
 
+        <div class="content two">
+          <div class="text">
+            <h3>BUSINESS AREAS</h3>
+          </div>
+          <div class="content-img">
+          </div>
+        </div>
+
+        <div class="content three">
+          <div class="text">
+            <h3>이마트몰</h3>
+            <p>지난 2000년 처음 오픈한 이마트몰은 신선/가공식품은 물론, 생활 전반을 아우르는 카테고리에서 총 11만 종 이상의 상품을 판매하고 있습니다. 이 곳에서는 이마트 매장에서 판매하고 있는 상품부터 온라인에서만 판매하는 상품까지 한 눈에 비교하고 구매할 수 있습니다.</p>
+          </div>
+          <div class="content-img">
+          </div>
+        </div>
+
+        <div class="content fourth">
+          <div class="text">
+            <h3>신세계몰</h3>
+            <p>지난 1997년 7월 처음 오픈한 신세계몰은 패션 카테고리부터 명품, 화장품, 생활, 잡화 등 전반에 이르는 44개의 카테고리를 보유하고 있으며, 총 4백만 종이 넘는 상품을 판매하고 있습니다. ‘Beyond Shopping, 부러움을 사다’ 라는 슬로건 아래, 트렌드와 시즌에 맞는 MD 제안과 신세계몰만의 차별화된 매장 운영으로 새로운 온라인 종합 쇼핑 문화를 선도하고 있습니다.</p>
+          </div>
+          <div class="content-img">
+          </div>
+        </div>
+
+        <div class="content five">
+          <div class="text">
+            <h3>신세계백화점몰</h3>
+            <p>지난 1997년 7월 신세계몰에서 처음으로 백화점 상품 판매를 시작하여, 2014년 1월에 SSG.COM 내 신세계백화점 사이트로 새롭게 열었습니다. 신세계백화점 강남점, 본점, 센텀시티점 등 12개 점포의 약 55만개의 상품이 입점하여 해외명품 카테고리부터 패션, 명품화장품, 유아동, 가전, 식품에 이르기까지 총 20개의 카테고리로 구성되어 있습니다. 신세계백화점 매장 상품과 동일한 상품을 고객에게 배송하며,
+              세일이나 명품 시즌오프, 명절과 같은 주요 행사도 같이 진행하고 있습니다.</p>
+          </div>
+          <div class="content-img">
+          </div>
+        </div>
+
+        <div class="content six">
+          <div class="text">
+            <h3>기타몰</h3>
+            <p>TRADERS [트레이더스몰/2013년 오픈]</p>
+            <p>BOOTS [부츠몰/2017년 오픈]</p>
+            <p>SHINSEGAE TV SHOPPING [신세계 TV 쇼핑몰/2017년 오픈]</p>
+            <p>S.I.VILLAGE [에스아이빌리지몰/2017년 오픈]</p>
+            <p>PREMIUM OULETS [프리미엄아울렛/2019년 오픈]</p>
+            <p>STARFIELD [스타필드몰/2018년 오픈]</p>
+            <p>HOWDY [하우디몰/2017년 오픈]</p>
+            <p>CASAMIA [까사미아/2019년 오픈]</p>
+            <p>CHICOR [시코르/2019년 오픈]</p>
+          </div>
+          <div class="content-img">
+          </div>
+          <div class="text2">
+            <p>고객이 원하는 가치를 한발 앞서 실현하기 위해서는 보다 다양한 사업영역에 도전하여 차별화된 가치를 제공해야 합니다.</p>
+            <p>SSG.COM은 다양한 사업영역과의 연결을 통해 고객의 삶의 가치를 높여주는 새로운 도전을 이어나가겠습니다.</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
     <!-- 하단 영역 -->
     <footer id="footer">
       <div class="footer-wrap">
@@ -114,6 +164,7 @@
         </div>
       </div>
     </footer>
+
 
   </div>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
