--- a/company/history.html
+++ b/company/history.html
@@ -22,7 +22,7 @@
       <nav id="top_nav">
         <ul>
           <li>
-            <a href="./introduce.html">회사소개</a>
+            <a href="./introduce.html" class="first" style="color: #6081C8;">회사소개</a>
             <ul class="submenu">
               <li><a href="./introduce.html">SSG.COM 소개</a></li>
               <li><a href="./history.html">성장 스토리</a></li>
@@ -54,61 +54,219 @@
       </nav>
     </header>
 
-    <main>
-      <!-- 메인배너 영역-->
-      <div class="mainbanner">
-        <div class="main-banner">
-          <video autoplay="" loop="" muted="" poster="./asset/img/main/poster_visual.jpg">
-            <source src="./asset/img/main/mov_visual.mp4" type="video/mp4">
-          </video>
+    <div class="company">
+      <div class="company-banner">
+        <div class="company-text">
+          <h1>성장스토리</h1>
+          <span></span>
+          <p>고객의 더 나은 쇼핑 환경을 위해<br>SSG.COM이 고민하며 걸어온 길입니다.</p>
         </div>
       </div>
-      <!-- 컨텐츠 영역 -->
-      <div class="container">
-        <div class="content-wrap">
-          <section>
-            <div class="content1">
-              <div class="content-text" data-aos="fade-right" data-aos-duration="2000">
-                <span>SSG e-Commerce Eco System</span>
-                <h2>e-Commerce<br>Eco System 구축</h2>
-                <p>SSG는 고객(Customer)과 협력업체 (Provider)를<br>
-                  상품 (Product) 중심으로 연결해주는<br>
-                  전자상거래 생태계를 구축하고자 합니다.</p>
-              </div>
-              <div class="content-img"></div>
-            </div>
-          </section>
-          <section>
-            <div class="content2">
-              <div class="content-img"></div>
-              <div class="content-text" data-aos="fade-left" data-aos-duration="2000">
-                <span>SSG Product</span>
-                <h2>백화점부터<br>이마트까지 한눈에 한번에</h2>
-                <p>우리의 모든 일상은 쇼핑으로 연결됩니다<br>삼시세끼를 채울 장도 봐야하고,<br>다가오는 계절을 대비해 옷도 사야하죠.</p>
-                <p>시야할 것도, 사고싶은 것도 많은 우리의 일상을<br>좀 더 편리하게 만들기 위해<br>SSG.COM은 하나의 앱에 모든 것을 담았습니다.</p>
-                <p>여기 저기 탐색할 필요 없어요.<br>백화점부터 이마트까지,<br>SSG.COM에서 신세계적인 쇼핑 라이프를 즐겨보세요.</p>
-              </div>
-            </div>
-          </section>
-          <section>
-            <div class="content3">
-              <div class="content-text1" data-aos="fade-up" data-aos-duration="2000">
-                <span>SSG Service</span>
-                <h2>내가 정한 시간에<br>쓱-배송</h2>
-              </div>
-              <div class="content-img"></div>
-              <div class="content-text2">
-                <p>온라인 쇼핑에서 가장 견디기 힘든일은 바로 언제 배송이 올지 기다리는 일이죠.</p>
-                <p>당장 오늘 저녁거리가 필요한데 배송이 제때 올까, 한번만 쓰면 샴푸가 동날 것 같은데 내일 아침에 배송이 올까</p>
-                <p>이런 걱정, SSG.COM에서는 내려놓으셔도 됩니다.</p>
-                <p>쓱배송은 내가 정한 일자에, 내가 선택한 시간에 도착하니까요.</p>
-              </div>
-            </div>
-          </section>
-        </div>
-      </div>
-    </main>
 
+      <div class="history-wrap">
+        <ul class="history">
+          <h2>1997년 신세계몰로 시작하여, 2019년 SSG.COM으로 새출발을 하기까지 더 나은<br>쇼핑 환경을 고민하며 걸어온 길입니다.</h2>
+          <li class="his-one story">
+            <h4>2019</h4>
+            <div class="table">
+              <dl class="">
+                <dt>10</dt>
+                <dd>한국산업의 고객만족도 (KCSI) 인터넷 쇼핑몰부문 1위</dd>
+              </dl>
+              <dl class="">
+                <dt>09</dt>
+                <dd>'브랜드 스탁' 선정 2019년 3분기 대한민국 100대 브랜드 진입</dd>
+              </dl>
+              <dl class="">
+                <dt>09</dt>
+                <dd>시코르 TAB 오픈</dd>
+              </dl>
+              <dl class="">
+                <dt>08</dt>
+                <dd>까사미아 TAB 오픈</dd>
+              </dl>
+              <dl class="">
+                <dt>06</dt>
+                <dd>새벽배송 TAB 오픈</dd>
+              </dl>
+              <dl class="">
+                <dt>03</dt>
+                <dd>합병 법인 설립</dd>
+              </dl>
+            </div>
+          </li>
+
+          <li class="his-two story">
+            <h4>2018</h4>
+            <div class="table">
+              <dl class="">
+                <dt>12</dt>
+                <dd>이마트몰 독립 법인 설립<br>
+                  신세계몰 독립 법인 설립</dd>
+              </dl>
+              <dl class="">
+                <dt>10</dt>
+                <dd>이마트몰 익일배송 서비스 「쓱배송 투모로우」 도입</dd>
+              </dl>
+              <dl class="">
+                <dt>06</dt>
+                <dd>스타필드 TAB 오픈</dd>
+              </dl>
+              <dl class="">
+                <dt>05</dt>
+                <dd>신세계몰 이미지검색 서비스 「쓱렌즈」 도입<br>
+                  A.I 기반 고객응대 서비스 「챗봇(Chatbot)」 도입<br>
+                  이마트몰 아침배송 서비스 「쓱배송 굿모닝」 도입</dd>
+              </dl>
+            </div>
+          </li>
+
+          <li class="his-three story">
+            <h4>2017</h4>
+            <div class="table">
+              <dl class="">
+                <dt>12</dt>
+                <dd>통합매출 2조원 돌파</dd>
+              </dl>
+              <dl class="">
+                <dt>11</dt>
+                <dd>2017 데이터 품질대상 대상 수상</dd>
+              </dl>
+              <dl class="">
+                <dt>08</dt>
+                <dd>Boots / S.I. VILLAGE TAB 오픈</dd>
+              </dl>
+              <dl class="">
+                <dt>07</dt>
+                <dd>Howdy TAB 오픈</dd>
+              </dl>
+              <dl class="">
+                <dt>06</dt>
+                <dd>신세계TV쇼핑 TAB 오픈</dd>
+              </dl>
+              <dl class="">
+                <dt>04</dt>
+                <dd>카카오 장보기 서비스 오픈</dd>
+              </dl>
+              <dl class="">
+                <dt>03</dt>
+                <dd>이마트몰 주문더하기 서비스 도입</dd>
+              </dl>
+              <dl class="">
+                <dt>02</dt>
+                <dd>대화형 커머스 서비스 「쓱톡(SSG TALK)」 도입</dd>
+              </dl>
+              <dl class="">
+                <dt>01</dt>
+                <dd>2016 서울영상광고제 대상 수상</dd>
+              </dl>
+            </div>
+          </li>
+
+          <li class="his-four story">
+            <h4>2016</h4>
+            <div class="table">
+              <dl class="">
+                <dt>12</dt>
+                <dd>2016 NCSI 국가고객 만족도 인터넷쇼핑몰 부문 1위 수상</dd>
+              </dl>
+              <dl class="">
+                <dt>11</dt>
+                <dd>SSG.COM 연간 주문회원 1,000만명 돌파</dd>
+              </dl>
+              <dl class="">
+                <dt>03</dt>
+                <dd>2016 대한민국 광고대상 3개부문 대상 수상</dd>
+              </dl>
+              <dl class="">
+                <dt>01</dt>
+                <dd>백화점 업계 최초 당일배송 서비스 도입<br>
+                  NE.O 002(김포 1센터) 오픈</dd>
+              </dl>
+            </div>
+          </li>
+
+          <li class="his-five story">
+            <h4>2015</h4>
+            <div class="table">
+              <dl class="">
+                <dt>12</dt>
+                <dd>SSG.COM TV광고 런칭</dd>
+              </dl>
+            </div>
+          </li>
+
+          <li class="his-six story">
+            <h4>2014</h4>
+            <div class="table">
+              <dl class="">
+                <dt>04</dt>
+                <dd>NE.O 001(보정 센터) 오픈</dd>
+              </dl>
+              <dl class="">
+                <dt>01</dt>
+                <dd>SSG.COM 오픈</dd>
+              </dl>
+            </div>
+          </li>
+
+          <li class="his-seven story">
+            <h4>2013</h4>
+            <div class="table">
+              <dl class="">
+                <dt>06</dt>
+                <dd>CRM/BI 페어 고객중심 경영 대상 수상</dd>
+              </dl>
+            </div>
+          </li>
+
+          <li class="his-eight story">
+            <h4>2012</h4>
+            <div class="table">
+              <dl class="">
+                <dt>12</dt>
+                <dd>통합 매출 1조원 돌파</dd>
+              </dl>
+              <dl class="">
+                <dt>10</dt>
+                <dd>그룹 온라인 부문 조직 통합</dd>
+              </dl>
+            </div>
+          </li>
+
+          <li class="his-nine story">
+            <h4>2010</h4>
+            <div class="table">
+              <dl class="">
+                <dt>07</dt>
+                <dd>이마트몰 2시간 단위 예약배송 서비스 도입</dd>
+              </dl>
+            </div>
+          </li>
+
+          <li class="his-ten story">
+            <h4>2000</h4>
+            <div class="table">
+              <dl class="">
+                <dt>12</dt>
+                <dd>이마트몰 오픈</dd>
+              </dl>
+            </div>
+          </li>
+
+          <li class="his-eleven story">
+            <h4>1997</h4>
+            <div class="table">
+              <dl class="">
+                <dt>07</dt>
+                <dd>신세계몰 오픈</dd>
+              </dl>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+    </div>
     <!-- 하단 영역 -->
     <footer id="footer">
       <div class="footer-wrap">
@@ -131,18 +289,19 @@
               </ul>
             </nav>
           </div>
-        </div>
-        <div class="container2">
-          <!-- footer 하단 영역 -->
-          <div class="coypyright">
-            ⓒcopryright <strong>mypage</strong> .All Rights Reserved.
-          </div>
-          <div class="credits">
-            Designed By <a href="http://company.ssg.com/main.ssg">SSG.COM</a>
+          <div class="container2">
+            <!-- footer 하단 영역 -->
+            <div class="coypyright">
+              ⓒcopryright <strong>mypage</strong> .All Rights Reserved.
+            </div>
+            <div class="credits">
+              Designed By <a href="http://company.ssg.com/main.ssg">SSG.COM</a>
+            </div>
           </div>
         </div>
       </div>
     </footer>
+
 
   </div>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
