--- a/company/introduce.html
+++ b/company/introduce.html
@@ -22,7 +22,7 @@
       <nav id="top_nav">
         <ul>
           <li>
-            <a href="./introduce.html">회사소개</a>
+            <a href="./introduce.html" class="first" style="color: #6081C8;">회사소개</a>
             <ul class="submenu">
               <li><a href="./introduce.html">SSG.COM 소개</a></li>
               <li><a href="./history.html">성장 스토리</a></li>
@@ -69,15 +69,16 @@
             <h3>INTRODUCTION</h3>
             <p>SSG.COM은 2014년 1월 1일 신세계백화점, 이마트 등 신세계그룹의 모든 상품을 온라인에서 한 눈에 보고, 한 번의 결제만으로 편하게 구매할 수 있는 통합 온라인 쇼핑 플랫폼으로 탄생했습니다. 차별화된 상품, 다양한 서비스, 편리한 혜택으로 삶의 가치를 높이는 쇼핑 경험을 제공합니다.</p>
           </div>
+
+          <div class="two">
+            <div class="text">
+              <h3>BUSINESS AREAS</h3>
+            </div>
+            <div class="content-img">
+            </div>
+          </div>
         </div>
 
-        <div class="content two">
-          <div class="text">
-            <h3>BUSINESS AREAS</h3>
-          </div>
-          <div class="content-img">
-          </div>
-        </div>
 
         <div class="content three">
           <div class="text">
@@ -152,14 +153,14 @@
               </ul>
             </nav>
           </div>
-        </div>
-        <div class="container2">
-          <!-- footer 하단 영역 -->
-          <div class="coypyright">
-            ⓒcopryright <strong>mypage</strong> .All Rights Reserved.
-          </div>
-          <div class="credits">
-            Designed By <a href="http://company.ssg.com/main.ssg">SSG.COM</a>
+          <div class="container2">
+            <!-- footer 하단 영역 -->
+            <div class="coypyright">
+              ⓒcopryright <strong>mypage</strong> .All Rights Reserved.
+            </div>
+            <div class="credits">
+              Designed By <a href="http://company.ssg.com/main.ssg">SSG.COM</a>
+            </div>
           </div>
         </div>
       </div>
