--- a/index.html
+++ b/index.html
@@ -29,24 +29,24 @@
               <li><a href="./company/brand.html">브랜드 스토리</a></li>
             </ul>
           </li>
-          <li><a href="./product/product.html">경영정보</a>
+          <li><a href="./info/notice.html">경영정보</a>
             <ul class="submenu">
-              <li><a href="./company/introduce.html">전자공고</a></li>
+              <li><a href="./info/notice.html">전자공고</a></li>
             </ul>
           </li>
-          <li><a href="./gallery/gallery.html">홍보채널</a>
+          <li><a href="./chanel/chanel.html">홍보채널</a>
             <ul class="submenu">
-              <li><a href="./company/introduce.html">브랜드 영상</a></li>
-              <li><a href="./company/ci.html">보도자료</a></li>
+              <li><a href="./chanel/chanel.html">브랜드 영상</a></li>
+              <li><a href="./chanel/news.html">보도자료</a></li>
             </ul>
           </li>
-          <li><a href="./community/notice.html">CSR 경영</a>
+          <li><a href="./csr/csr1.html">CSR 경영</a>
             <ul class="submenu">
-              <li><a href="./company/introduce.html">CSR 경영</a></li>
-              <li><a href="./company/ci.html">투명경영</a></li>
-              <li><a href="./company/history.html">사회공헌</a></li>
-              <li><a href="./company/history.html">상생경영</a></li>
-              <li><a href="./company/history.html">핫라인</a></li>
+              <li><a href="./csr/csr1.html">CSR 경영</a></li>
+              <li><a href="./csr/csr2.html">투명경영</a></li>
+              <li><a href="./csr/csr3.html">사회공헌</a></li>
+              <li><a href="./csr/csr4.html">상생경영</a></li>
+              <li><a href="./csr/csr5.html">핫라인</a></li>
             </ul>
           </li>
           <li><a href="./location/location.html">찾아오시는 길</a></li>
@@ -92,7 +92,7 @@
           </section>
           <section>
             <div class="content3">
-              <div class="content-text1" data-aos="fade-up" data-aos-duration="2000">
+              <div class="content-text1" data-aos="fade-right" data-aos-duration="2000">
                 <span>SSG Service</span>
                 <h2>내가 정한 시간에<br>쓱-배송</h2>
               </div>
@@ -106,43 +106,42 @@
             </div>
           </section>
         </div>
+        <!-- 하단 영역 -->
+        <footer id="footer">
+          <div class="footer-wrap">
+            <div class="footer-logo">
+              <h6>(주)에스에스지닷컴</h6>
+            </div>
+            <div class="container">
+              <div class="foot-info">
+                <span>대표자 : 강희석 </span>
+                <p>사업자등록번호 : 870-88-01143 서울특별시 종로구 우정국로 26 통신판매업 신고번호 : 제2020-서울종로-1154호</p>
+                <span>개인정보보호책임자 : 김민</span>
+                <p>FAX : 02-2068-7118 ssg@ssg.com</p>
+              </div>
+              <div class="foot-bottom">
+                <nav>
+                  <ul>
+                    <li><a href="#">개인정보처리방침</a></li>
+                    <li><a href="#">영상정보처리기기 운영관리방침</a></li>
+                    <li><a href="#">핫라인</a></li>
+                  </ul>
+                </nav>
+              </div>
+              <div class="container2">
+                <!-- footer 하단 영역 -->
+                <div class="coypyright">
+                  ⓒcopryright <strong>mypage</strong> .All Rights Reserved.
+                </div>
+                <div class="credits">
+                  Designed By <a href="http://company.ssg.com/main.ssg">SSG.COM</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </footer>
       </div>
     </main>
-
-    <!-- 하단 영역 -->
-    <footer id="footer">
-      <div class="footer-wrap">
-        <div class="footer-logo">
-          <h6>(주)에스에스지닷컴</h6>
-        </div>
-        <div class="container">
-          <div class="foot-info">
-            <span>대표자 : 강희석 </span>
-            <p>사업자등록번호 : 870-88-01143 서울특별시 종로구 우정국로 26 통신판매업 신고번호 : 제2020-서울종로-1154호</p>
-            <span>개인정보보호책임자 : 김민</span>
-            <p>FAX : 02-2068-7118 ssg@ssg.com</p>
-          </div>
-          <div class="foot-bottom">
-            <nav>
-              <ul>
-                <li><a href="#">개인정보처리방침</a></li>
-                <li><a href="#">영상정보처리기기 운영관리방침</a></li>
-                <li><a href="#">핫라인</a></li>
-              </ul>
-            </nav>
-          </div>
-        </div>
-        <div class="container2">
-          <!-- footer 하단 영역 -->
-          <div class="coypyright">
-            ⓒcopryright <strong>mypage</strong> .All Rights Reserved.
-          </div>
-          <div class="credits">
-            Designed By <a href="http://company.ssg.com/main.ssg">SSG.COM</a>
-          </div>
-        </div>
-      </div>
-    </footer>
 
   </div>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
