--- a/info/notice.html
+++ b/info/notice.html
@@ -1,184 +1,73 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
-  <title>notice</title>
-  <meta name="description" content="notice content">
-  <link rel="stylesheet" href="../asset/css/style.css">
-  <script type="text/javascript" src="../js/jquery.min.js"></script>
-  <script type="text/javascript" src="../js/common.js"></script>
+  <title>SSG 이윤정 포트폴리오 sass site</title>
+  <meta name="description" content="sass site add footer style">
+  <link rel="stylesheet" href="./asset/css/style.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <script type="text/javascript" src="./js/jquery.min.js"></script>
+  <script type="text/javascript" src="./js/common.js"></script>
   <!--[if lt IE 9]>
   <script src = "http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
-<body class="subpage">
- <div id="wrap">
-   <header id="header">
+
+<body>
+  <div id="wrap">
+    <header id="header">
       <!-- 헤더 영역  -->
-      <h1 id="top_logo"><a href="../index.html">Xwood</a></h1>
+      <h1 id="top_logo"><a href="./index.html"><img src="./asset/img/main/ssg_logo_black.svg" alt=""></a></h1>
       <nav id="top_nav">
         <ul>
           <li>
-            <a href="../company/introduce.html">Company</a>
+            <a href="./company/introduce.html">회사소개</a>
             <ul class="submenu">
-              <li><a href="../company/introduce.html">introduce</a></li>
-              <li><a href="../company/ci.html">ci</a></li>
-              <li><a href="../company/history.html">history</a></li>
+              <li><a href="./company/introduce.html">SSG.COM 소개</a></li>
+              <li><a href="./company/history.html">성장 스토리</a></li>
+              <li><a href="./company/brand.html">브랜드 스토리</a></li>
             </ul>
           </li>
-          <li><a href="../product/product.html">Product</a></li>
-          <li><a href="../gallery/gallery.html">Gallery</a></li>
-          <li><a href="../community/notice.html">Community</a></li>
-          <li><a href="../location/location.html">Location</a></li>
+          <li><a href="./info/notice.html">경영정보</a>
+            <ul class="submenu">
+              <li><a href="./info/notice.html">전자공고</a></li>
+            </ul>
+          </li>
+          <li><a href="./chanel/chanel.html">홍보채널</a>
+            <ul class="submenu">
+              <li><a href="./chanel/chanel.html">브랜드 영상</a></li>
+              <li><a href="./chanel/news.html">보도자료</a></li>
+            </ul>
+          </li>
+          <li><a href="./csr/csr1.html">CSR 경영</a>
+            <ul class="submenu">
+              <li><a href="./csr/csr1.html">CSR 경영</a></li>
+              <li><a href="./csr/csr2.html">투명경영</a></li>
+              <li><a href="./csr/csr3.html">사회공헌</a></li>
+              <li><a href="./csr/csr4.html">상생경영</a></li>
+              <li><a href="./csr/csr5.html">핫라인</a></li>
+            </ul>
+          </li>
+          <li><a href="./location/location.html">찾아오시는 길</a></li>
         </ul>
       </nav>
-   </header>
-   <main>
-     <!-- 컨텐츠 영역 -->
-     <div class="container">
-       <!-- 왼쪽메뉴 -->
-       <aside id="lnb">
-         <ul>
-           <li><a href="./notice.html" class="on">Notice</a></li>
-           <!-- <li><a href="./faq.html">FAQ</a></li> -->
-         </ul>
-       </aside>
-       <!-- 컨텐츠 본문 -->
-       <div class="content">
-         <h2 class="sub_title"><span>Notice</span></h2>
-         <div class="inner">
-           <table cellpadding="0" cellspacing="0" border="0">
-             <thead>
-               <tr>
-                 <th>Code</th>
-                 <th>Company</th>
-                 <th>Price</th>
-                 <th>Change</th>
-                 <th>Change %</th>
-               </tr>
-             </thead>
-             <tbody>
-               <tr>
-                 <td>AAC</td>
-                 <td>AUSTAIAN COMPANY</td>
-                 <td>$1.38</td>
-                 <td>2.01</td>
-                 <td>-0.36</td>
-               </tr>
-               <tr>
-                 <td>AAC</td>
-                 <td>AUSTAIAN COMPANY</td>
-                 <td>$1.38</td>
-                 <td>2.01</td>
-                 <td>-0.36</td>
-               </tr>
-               <tr>
-                 <td>AAC</td>
-                 <td>AUSTAIAN COMPANY</td>
-                 <td>$1.38</td>
-                 <td>2.01</td>
-                 <td>-0.36</td>
-               </tr>
-               <tr>
-                 <td>AAC</td>
-                 <td>AUSTAIAN COMPANY</td>
-                 <td>$1.38</td>
-                 <td>2.01</td>
-                 <td>-0.36</td>
-               </tr>
-               <tr>
-                 <td>AAC</td>
-                 <td>AUSTAIAN COMPANY</td>
-                 <td>$1.38</td>
-                 <td>2.01</td>
-                 <td>-0.36</td>
-               </tr>
-               <tr>
-                 <td>AAC</td>
-                 <td>AUSTAIAN COMPANY</td>
-                 <td>$1.38</td>
-                 <td>2.01</td>
-                 <td>-0.36</td>
-               </tr>
-               <tr>
-                 <td>AAC</td>
-                 <td>AUSTAIAN COMPANY</td>
-                 <td>$1.38</td>
-                 <td>2.01</td>
-                 <td>-0.36</td>
-               </tr>
-               <tr>
-                 <td>AAC</td>
-                 <td>AUSTAIAN COMPANY</td>
-                 <td>$1.38</td>
-                 <td>2.01</td>
-                 <td>-0.36</td>
-               </tr>
-             </tbody>
-           </table>
-           <a href="#" class="gbtn">write</a>
-         </div>
-       </div>
-     </div>
-   </main>
-   <!-- 하단 영역 -->
-   <footer id="footer">
-     <div class="footer_top">
-       <!-- footer 상단 영역 -->
-       <div class="container">
-         <div class="row">
-           <div class="column footer_logo">
-             <!-- footer logo -->
-             <h3>logo</h3>
-           </div>
-           <div class="column">
-             <!-- site map -->
-             <h4>site map</h4>
-             <ul>
-               <li><a href="../company/introduce.html">Company</a></li>
-               <li><a href="../product/product.html">Product</a></li>
-               <li><a href="../gallery/gallery.html">Gallery</a></li>
-               <li><a href="../community/notice.html">Community</a></li>
-               <li><a href="../location/location.html">Location</a></li>
-             </ul>
-           </div>
-           <div class="column">
-             <!-- contact us -->
-             <h4>contact us</h4>
-             <p>
-               A108 Adam street<br>
-               New York, NY 535022<br>
-               United states<br>
-               <strong>phone&nbsp;:&nbsp;</strong><a href="tel=+82-010-0000-0000">+82-010-0000-0000</a><br>
-               <strong>Email&nbsp;:&nbsp;</strong><a href="mailto=mymail@naver.com">mymail@naver.com</a><br>
-             </p>
-           </div>
-           <div class="column news">
-             <!-- news -->
-             <h4>news</h4>
-             <p>
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet,
-               consectetur adipisicing elit
-             </p>
-             <form action="">
-               <input type="search" name="search">
-               <input type="submit" value="search">
-             </form>
-           </div>
-         </div>
-       </div>
-     </div>
-     <div class="container">
-       <!-- footer 하단 영역 -->
-       <div class="coypyright">
-         ⓒcopryright <strong>mypage</strong> .All Rights Reserved.
-       </div>
-       <div class="credits">
-         Designed By <a href="mailto:mymail@naver.com">My Name</a>
-       </div>
-     </div>
-   </footer>
- </div>
+    </header>
+
+    <div class="notice-wrap">
+      <div class="notice-banner">
+        <h1>전자공고</h1>
+        <span></span>
+        <p>SSG.COM의 공지사항을<br>안내해드립니다.</p>
+      </div>
+    </div>
+
+
+  </div>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
+
 </html>
