--- a/company/introduce.html
+++ b/company/introduce.html
@@ -29,9 +29,9 @@
               <li><a href="./brand.html">브랜드 스토리</a></li>
             </ul>
           </li>
-          <li><a href="./product/product.html">경영정보</a>
+          <li><a href="../info/notice.html">경영정보</a>
             <ul class="submenu">
-              <li><a href="./company/introduce.html">전자공고</a></li>
+              <li><a href="../info/notice.html">전자공고</a></li>
             </ul>
           </li>
           <li><a href="./gallery/gallery.html">홍보채널</a>
