--- a/info/notice.html
+++ b/info/notice.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <title>SSG 이윤정 포트폴리오 sass site</title>
   <meta name="description" content="sass site add footer style">
-  <link rel="stylesheet" href="./asset/css/style.css">
+  <link rel="stylesheet" href="../asset/css/style.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <script type="text/javascript" src="./js/jquery.min.js"></script>
-  <script type="text/javascript" src="./js/common.js"></script>
+  <script type="text/javascript" src="../js/jquery.min.js"></script>
+  <script type="text/javascript" src="../js/common.js"></script>
   <!--[if lt IE 9]>
   <script src = "http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -18,20 +18,20 @@
   <div id="wrap">
     <header id="header">
       <!-- 헤더 영역  -->
-      <h1 id="top_logo"><a href="./index.html"><img src="./asset/img/main/ssg_logo_black.svg" alt=""></a></h1>
+      <h1 id="top_logo"><a href="../index.html"><img src="../asset/img/main/ssg_logo_black.svg" alt=""></a></h1>
       <nav id="top_nav">
         <ul>
           <li>
-            <a href="./company/introduce.html">회사소개</a>
+            <a href="../company/introduce.html">회사소개</a>
             <ul class="submenu">
-              <li><a href="./company/introduce.html">SSG.COM 소개</a></li>
-              <li><a href="./company/history.html">성장 스토리</a></li>
-              <li><a href="./company/brand.html">브랜드 스토리</a></li>
+              <li><a href="../company/introduce.html">SSG.COM 소개</a></li>
+              <li><a href="../company/history.html">성장 스토리</a></li>
+              <li><a href="../company/brand.html">브랜드 스토리</a></li>
             </ul>
           </li>
-          <li><a href="./info/notice.html">경영정보</a>
+          <li><a href="./notice.html" style="color: #6081C8;">경영정보</a>
             <ul class="submenu">
-              <li><a href="./info/notice.html">전자공고</a></li>
+              <li><a href="./notice.html">전자공고</a></li>
             </ul>
           </li>
           <li><a href="./chanel/chanel.html">홍보채널</a>
@@ -60,7 +60,104 @@
         <span></span>
         <p>SSG.COM의 공지사항을<br>안내해드립니다.</p>
       </div>
+
+      <div class="notice-table">
+        <div class="table-wrap">
+          <thead class="name">
+            <tr>
+              <th>제목</th>
+              <th>등록일</th>
+            </tr>
+          </thead>
+          <tbody class="text">
+            <tr>
+              <td class="subtext">
+                제3기 결산공고
+              </td>
+              <td class="day">
+                2021-03-22
+              </td>
+            </tr>
+            <tr>
+              <td class="subtext">
+                전자증권제도 도입관련 주주 공지(실물주권 효력 말소, 전자등록일 고지 등)
+              </td>
+              <td class="day">
+                2021-03-27
+              </td>
+            </tr>
+            <tr>
+              <td class="subtext">
+                제2기 결산공고
+              </td>
+              <td class="day">
+                2020-03-24
+              </td>
+            </tr>
+            <tr>
+              <td class="subtext">
+                제1기 결산공고
+              </td>
+              <td class="day">
+                2019-03-14
+              </td>
+            </tr>
+            <tr>
+              <td class="subtext">
+                (주) 이마트몰 합병에 따른 채권자 이의 제출 공고
+              </td>
+              <td class="day">
+                2019-01-29
+              </td>
+            </tr>
+            <tr>
+              <td class="subtext">
+                (주) 신세계몰 합병에 따른 채권자 이의 및 주권 제출 공고
+              </td>
+              <td class="day">
+                2019-01-29
+              </td>
+            </tr>
+          </tbody>
+        </div>
+        <p class="page-num">1</p>
+      </div>
     </div>
+
+    <!-- 하단 영역 -->
+    <footer id="footer">
+      <div class="footer-wrap">
+        <div class="footer-logo">
+          <h6>(주)에스에스지닷컴</h6>
+        </div>
+        <div class="container">
+          <div class="foot-info">
+            <span>대표자 : 강희석 </span>
+            <p>사업자등록번호 : 870-88-01143 서울특별시 종로구 우정국로 26 통신판매업 신고번호 : 제2020-서울종로-1154호</p>
+            <span>개인정보보호책임자 : 김민</span>
+            <p>FAX : 02-2068-7118 ssg@ssg.com</p>
+          </div>
+          <div class="foot-bottom">
+            <nav>
+              <ul>
+                <li><a href="#">개인정보처리방침</a></li>
+                <li><a href="#">영상정보처리기기 운영관리방침</a></li>
+                <li><a href="#">핫라인</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="container2">
+            <!-- footer 하단 영역 -->
+            <div class="coypyright">
+              ⓒcopryright <strong>mypage</strong> .All Rights Reserved.
+            </div>
+            <div class="credits">
+              Designed By <a href="http://company.ssg.com/main.ssg">SSG.COM</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
   </div>
